# moonshine-l2-finetuning

./: LICENSE  README.md  main.py  pyproject.toml  train.py
configs/: l2_finetune.yaml
moonshine_l2_ft/: curriculum.py  data_loader.py
scripts/: evaluate.py  inf.sh  inference.py
