[project]
name = "moonshine-l2-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.24.0",
    "black>=23.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "gradio>=4.0.0",
    "isort>=5.12",
    "jiwer>=3.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "optimum>=1.14.0",
    "pandas>=2.0.0",
    "pytest>=7.0",
    "pyyaml>=6.0",
    "schedulefree>=1.4.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
]
